# FastApi_task6

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a7e0b3a7b36e_create_all_tables.py
app/: core.py  errors.py  logging_config.py  main.py  media.py  security.py
app/db/: database.py
app/db/models/: __init__.py  category.py  comment.py  location.py  post.py  user.py
app/domain/: __init__.py  entities.py  errors.py  ports.py
app/domain/use_cases/: __init__.py  auth.py  blog.py
app/repositories/: base.py  category.py  comment.py  location.py  mappers.py  post.py  user.py
app/routers/: auth.py  categories.py  comments.py  dependencies.py  locations.py  posts.py  users.py  utils.py
app/schemas/: auth.py  blog.py
blogicum_fastapi-info/: PKG-INFO  SOURCES.txt  requires.txt
blogicum_fastapi_min.egg-info/: PKG-INFO  SOURCES.txt
